# JavSPn

./: JavSP.py  README.en-US.md  README.md  pyproject.toml  requirements-linux.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: cx_freeze.yml  cx_freeze_linux.yml  cx_freeze_windows.yml  pull_dependencies.yml  pyinstaller.yml  test-basic-funcs.yml  test-web-funcs.yml  test_basic_funcs.yml  test_web_funcs.yml
core/: config.ini  config.py
core/ai_crop/: pphumanseg.py  retina.py  yunet.py
docs/: TODO.md
javspn/: __main__.py  server.py
javspn/core/: avid.py  chromium.py  config.ini  config.py  datatype.py  file.py  func.py  lib.py  nfo.py
javspn/core/ai_crop/: baidu_aip.py  pphumanseg.py  yunet.py
javspn/web/: airav.py  avsox.py  avwiki.py  base.py  dl_getchu.py  fanza.py  fc2.py  fc2fan.py  gyutto.py  jav321.py  javbus.py  javdb.py  javlib.py  javmenu.py  limiter.py  mgstage.py  msin.py  prestige.py  proxyfree.py  translate.py
make/: build.spec
scripts/: call_crawler.py  check_genre.py  version.py
tools/: airav_search.py  call_crawler.py
unittest/: test_avid.py  test_crawlers.py  test_exe.py  test_exe_linux.py  test_file.py  test_func.py  test_lib.py  test_proxyfree.py  test_server_client.py
